--- a/template/node8-express/Dockerfile
+++ b/template/node8-express/Dockerfile
@@ -5,7 +5,7 @@ RUN addgroup -S app && adduser -S -g app app
 # Alternatively use ADD https:// (which will not be cached by Docker builder)
 RUN apk --no-cache add curl \
     && echo "Pulling watchdog binary from Github." \
-    && curl -sSLf https://github.com/openfaas-incubator/of-watchdog/releases/download/0.2.1/of-watchdog > /usr/bin/fwatchdog \
+    && curl -sSLf https://github.com/openfaas-incubator/of-watchdog/releases/download/0.2.3/of-watchdog > /usr/bin/fwatchdog \
     && chmod +x /usr/bin/fwatchdog \
     && apk del curl --no-cache
 
@@ -48,6 +48,10 @@ ENV cgi_headers="true"
 ENV fprocess="node index.js"
 ENV mode="http"
 ENV upstream_url="http://127.0.0.1:3000"
+
+ENV exec_timeout="20s" 
+ENV write_timeout="25s" 
+ENV read_timeout="25s" 
 
 HEALTHCHECK --interval=1s CMD [ -e /tmp/.lock ] || exit 1
 
