--- a/template/node10-express-arm64/Dockerfile
+++ b/template/node10-express-arm64/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:10.12.0-alpine
+FROM openfaas/of-watchdog:0.5.3 as watchdog
 
-RUN addgroup -S app && adduser -S -g app app
+FROM node:10.12.0-alpine as ship
 
-# Alternatively use ADD https:// (which will not be cached by Docker builder)
+COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
+RUN chmod +x /usr/bin/fwatchdog
+
 RUN apk --no-cache add curl ca-certificates \
-    && echo "Pulling watchdog binary from Github." \
-    && curl -sSLf https://github.com/openfaas-incubator/of-watchdog/releases/download/0.5.0/of-watchdog-arm64 > /usr/bin/fwatchdog \
-    && chmod +x /usr/bin/fwatchdog \
-    && apk del curl
+    && addgroup -S app && adduser -S -g app app
 
 WORKDIR /root/
 
